bugzilla 112685 gmf-head sshaw 051014 Sweep code for creation of Boolean objects